style: change grandient color

--- a/src/styles/pages/orphanages-map.css
+++ b/src/styles/pages/orphanages-map.css
@@ -8,7 +8,7 @@
 
 #map-page aside {
     width: 440px;
-    background: linear-gradient(329.54deg, #29B6D1 0%, #00C7C7 100%);
+    background: linear-gradient(329.54deg, #5E00E8 0%, #00C7C7 100%);
     padding: 80px;
 
     display: flex;
